--- a/_2022-08-20-Ideas.md
+++ b/_2022-08-20-Ideas.md
@@ -13,3 +13,4 @@ Here are some quick notes on what I have in mind for a training/learing platform
 - Explore tools and resources
   - Are there existing resources to help with the idea
   - What is the best tool for the job 
+So let's start building!
